--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Martel+Sans:300&display=swap');
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-family: 'Martel Sans', sans-serif;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  padding: 0;
 }
