--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Martel+Sans:300&display=swap');
 *, *::before, *::after {
-  box-sizing: border-box;
-}
-
-body {
   margin: 0;
   padding: 0;
   font-family: 'Martel Sans', sans-serif;
+  color: inherit;
+}
+
+body {
+  box-sizing: border-box;
+  color: #444;
+ 
 }
